src/objects/Payment_Terminal__c.object
<CustomObject>
    <fields>
	    <fullName>Make__c</fullName>
	    <label>Make</label>
	    <length>100</length>
	    <type>Text</type>
	</fields>
	<fields>
	    <fullName>Model__c</fullName>
	    <label>Model</label>
	    <length>100</length>
	    <type>Text</type>
	</fields>
	<fields>
	    <fullName>Nickname__c</fullName>
	    <description>Nickname of the terminal</description>
	    <inlineHelpText>Nickname of the terminal, required to sync terminal with gateway</inlineHelpText>
	    <label>Nickname</label>
	    <length>255</length>
	    <type>Text</type>
	</fields>
	<fields>
	    <fullName>Preferred_Payment_Id__c</fullName>
	    <label>Preferred Payment Id</label>
	    <length>255</length>
	    <type>Text</type>
	</fields>
	<fields>
	    <fullName>Registration_Code__c</fullName>
	    <description>Registration code of the terminal</description>
	    <inlineHelpText>Registration code of the terminal, required to sync terminal with gateway</inlineHelpText>
	    <label>Registration Code</label>
	    <length>255</length>
	    <type>Text</type>
	</fields>
	<fields>
	    <fullName>Serial_Number__c</fullName>
	    <description>Serial number of the terminal</description>
	    <label>Serial Number</label>
	    <length>255</length>
	    <type>Text</type>
	</fields>
	<fields>
	    <fullName>Status__c</fullName>
	    <label>Status</label>
	    <type>Picklist</type>
	    <valueSet>
	        <valueSetDefinition>
	            <value>
	                <fullName>Active</fullName>
	            </value>
	            <value>
	                <fullName>Deleted</fullName>
	            </value>
	        </valueSetDefinition>
	    </valueSet>
	</fields>
	<fields>
		<fullName>Is_Signature_Required__c</fullName>
		<defaultValue>false</defaultValue>
		<inlineHelpText>If signature capture is enabled for a particular terminal then the terminal will always prompt the customer to sign on the signature pad.</inlineHelpText>
		<label>Is Signature Required</label>
		<type>Checkbox</type>
	</fields>
	<fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Terminals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
	<listViews>
        <fullName>Additional_Details</fullName>
	    <columns>NAME</columns>
	    <columns>Nickname__c</columns>
	    <columns>Registration_Code__c</columns>
	    <columns>Preferred_Payment_Id__c</columns>
	    <columns>Status__c</columns>
	    <columns>CREATED_DATE</columns>
	    <filterScope>Everything</filterScope>
	    <label>Additional Details</label>
        <language>en_US</language>
    </listViews>
    <label>Payment Terminal</label>
    <nameField>
        <displayFormat>PT-{00000000}</displayFormat>
        <label>Payment Terminal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Terminals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>